--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
-    
+    <header>
+        <div class="left_header">
+            <div class="header_logo">
+                <img src="img/logoes/logo_header.svg" style="margin-right: 14px;">
+                <img src="img/logoes/logo_school.svg" style="margin-right: 7px;">
+                <img src="img/logoes/logo_speaky.svg">
+            </div>
+            <div class="study_menu">
+                <div class="teens">
+                    <div>Обучение детей</div>
+                    <img src="img/symbols/down-small.svg" style="width: 17px;">
+                </div>
+                <div class="olds">Обучение взрослых</div>
+            </div>
+        </div>
+        <div class="right_header">
+            <img src="img/icons/facebook.svg" style="margin-right: 24px;">
+            <img src="img/icons/inst.svg" style="margin-right: 24px;">
+            <img src="img/icons/whatsup.svg" style="margin-right: 12px;">
+            <img src="img/icons/vk.svg" style="width: 44px;">
+            <img src="img/icons/phone.svg" style="width: 44px;">
+        </div>
+    </header>
 </body>
 </html>
