--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/unit_1.css">
+    <link rel="stylesheet" href="css/unit_2.css">
+    <link rel="stylesheet" href="fonts/nextart/nextart.css">
 </head>
 <body>
     <header>
@@ -32,5 +36,36 @@
             <img src="img/icons/phone.svg" style="width: 44px;">
         </div>
     </header>
+    <div class="unit_1">
+        <div class="left">
+            <div class="big_text">
+                ШКОЛА ИНОСТРАННЫХ ЯЗЫКОВ ДЛЯ ВСЕЙ СЕМЬИ
+            </div>
+            <div class="button_trial_lesson">
+                Пробное занятие
+            </div>
+        </div>
+        <img src="img/images/illustration1.svg">
+    </div>
+    <div class="unit_2">
+        <div class="left">
+            <img src="img/images/childrens.svg">
+            <h1 class="text">
+                обучение
+            </h1>
+            <h1 class="text" style="top: 105px;">
+                взрослых
+            </h1>
+        </div>
+        <div class="right">
+            <img src="img/images/childrens.svg">
+            <h1 class="text">
+                обучение
+            </h1>
+            <h1 class="text" style="top: 105px;">
+                детей
+            </h1>
+        </div>
+    </div>
 </body>
 </html>
