--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/unit_1.css">
     <link rel="stylesheet" href="css/unit_2.css">
+    <link rel="stylesheet" href="css/unit_3.css">
+    <link rel="stylesheet" href="css/unit_4.css">
     <link rel="stylesheet" href="fonts/nextart/nextart.css">
 </head>
 <body>
@@ -65,6 +67,70 @@
             <h1 class="text" style="top: 105px;">
                 детей
             </h1>
+        </div>
+    </div>
+    <div class="unit_3">
+        <div class="maintext">
+            <div class="rectangle"></div>
+            <h1 class="text">У нас вы можете выучить:</h1>
+        </div>
+        <div class="languages">
+            <div class="eng">
+                <img src="img/icons/uk.svg">
+                <h2 class="lang_text">Английский</h2>
+            </div>
+            <div class="ger">
+                <img src="img/icons/germany.svg">
+                <h2 class="lang_text">Немецкий</h2>
+            </div>
+            <div class="span">
+                <img src="img/icons/spain.svg">
+                <h2 class="lang_text">Испанский</h2>
+            </div>
+            <div class="fr">
+                <img src="img/icons/france.svg">
+                <h2 class="lang_text">Французский</h2>
+            </div>
+        </div>
+    </div>
+    <div class="unit_4">
+        <div class="left">
+            <div class="maintext">
+                <div class="rectangle"></div>
+                <h1 class="text">Почему Speaky School?</h1>
+            </div>
+            <div>
+                Ежегодно наши ученики успешно сдают международные экзамены, поступают в престижные российские и европейские учебные заведения. 
+                В нашей школе обучаются дети и родители, школьники и взрослые, бабушки и дедушки!
+            </div>
+        </div>
+        <div class="middle">
+            <div class="first">
+                <img src="img/icons/015-connection.svg">
+                <h2>Преподаватели – носители языка</h2>
+            </div>
+            <div class="second">
+                <img src="img/icons/026-search.svg">
+                <h2>Онлайн и офлайн занятия</h2>
+            </div>
+            <div class="third">
+                <img src="img/icons/022-wenibar.svg">
+                <h2>Индивидуальные и групповые занятия</h2>
+            </div>
+        </div>
+        <div class="right">
+            <div class="first">
+                <img src="img/icons/019-website.svg">
+                <h2>Все занятия исключительно на выбранном языке</h2>
+            </div>
+            <div class="second">
+                <img src="img/icons/040-online.svg">
+                <h2>Персональная программа обучения</h2>
+            </div>
+            <div class="third">
+                <img src="img/icons/012-graduate.svg">
+                <h2>Аккредитация международной организацией Edexel</h2>
+            </div>
         </div>
     </div>
 </body>
