--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <link rel="stylesheet" href="css/unit_3.css">
     <link rel="stylesheet" href="css/unit_4.css">
     <link rel="stylesheet" href="css/unit_5.css">
+    <link rel="stylesheet" href="css/unit_6.css">
+    <link rel="stylesheet" href="css/unit_7.css">
     <link rel="stylesheet" href="fonts/nextart/nextart.css">
     <link rel="stylesheet" href="fonts/raleway/raleway.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -172,6 +175,113 @@
             <img src="img/images/illustration2.svg">
         </div>
     </div>
+    <div class="unit_6">
+        <div class="unit">
+            <img class="illustration" src="img/images/illustration_unit_6.svg">
+            <div class="for_kids">
+                <div class="caption">Для детей</div>
+                <div class="rectangle"></div>
+                <div class="columns">
+                    <div class="column">
+                        <h2 class="name">Онлайн</h2>
+                        <div class="lines">
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>адаптированная под ребёнка программа</h3>
+                            </div>
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>гибкое расписание</h3>
+                            </div>
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>занятия в привычной обстановке</h3>
+                            </div>
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>динамичные занятия по 30-40 минут</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h2 class="name">Офлайн</h2>
+                        <div class="lines">
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>занятия в нашей школе в г. Троицке</h3>
+                            </div>
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>удобное расписание</h3>
+                            </div>
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>живое общение со сверстниками</h3>
+                            </div>
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>увлекательные занятия в небольших группах</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="unit_7">
+        <div class="unit">
+            <div class="for_kids">
+                <div class="caption">Для взрослых</div>
+                <div class="rectangle"></div>
+                <div class="columns">
+                    <div class="column">
+                        <h2 class="name">Офлайн</h2>
+                        <div class="lines">
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>занятия в нашей школе в г. Троицке</h3>
+                            </div>
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>удобное расписание</h3>
+                            </div>
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>уютная атмосфера</h3>
+                            </div>
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>индивидуальные или групповые занятия</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h2 class="name">Онлайн</h2>
+                        <div class="lines">
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>занятия из любой точки в удобное время</h3>
+                            </div>
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>персональная программа</h3>
+                            </div>
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>гибкое расписание</h3>
+                            </div>
+                            <div class="line">
+                                <img src="img/symbols/Vector.svg">
+                                <h3>преодоление языкового барьера</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img class="illustration" src="img/images/illustration_unit_6.svg">
+        </div>
+    </div>
+    <script src="js/unit_5.js"></script>
 </body>
 </html>
 <datalist id="languages">
