--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/unit_5.css">
     <link rel="stylesheet" href="css/unit_6.css">
     <link rel="stylesheet" href="css/unit_7.css">
+    <link rel="stylesheet" href="css/unit_8.css">
     <link rel="stylesheet" href="fonts/nextart/nextart.css">
     <link rel="stylesheet" href="fonts/raleway/raleway.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -279,6 +280,90 @@
                 </div>
             </div>
             <img class="illustration" src="img/images/illustration_unit_6.svg">
+        </div>
+    </div>
+    <div class="unit_8">
+        <div class="unit">
+            <h1>Мы используем SMART-подход в обучении</h1>
+            <h3 class="topic">Чтобы обучение было максимально эффективным, мы составляем индивидуальную карту обучения: ваша исходная точка, конечный результат, срок достижения этого результата. И будем вместе идти к этим целям</h3>
+            <div class="smart">
+                <div>
+                    <img src="img/symbols/S.svg" style="left: 20px">
+                    <h3>specific</h3>
+                    <h2>Конкретная цель</h2>
+                </div>
+                <div>
+                    <img src="img/symbols/M.svg">
+                    <h3>measurable</h3>
+                    <h2>Критерии успеха</h2>
+                </div>
+                <div>
+                    <img src="img/symbols/A.svg" style="left: 10px">
+                    <h3>achievable</h3>
+                    <h2>Достижимая цель</h2>
+                </div>
+                <div>
+                    <img src="img/symbols/R.svg" style="left: 20px">
+                    <h3>relevant</h3>
+                    <h2>Цель, имеющая значение</h2>
+                </div>
+                <div>
+                    <img src="img/symbols/T.svg" style="left: 20px">
+                    <h3>time bound</h3>
+                    <h2>Четкие сроки</h2>
+                </div>
+            </div>
+            <div class="example">
+                <img src="img/images/композиция с фото.png">
+                <div class="text">
+                    <h2>Пример</h2>
+                    <h3>Я учил английский в школе, но все забыл. Сейчас я хочу работать в международной компании, успешно пройти интервью и затем свободно общаться с коллегами. </h3>
+                </div>
+            </div>
+            <div class="steps">
+                <div class="step">
+                    <div>
+                        <h2>Определяем текущий уровень и ставим цель</h2>
+                        <h3>Улучшение языковых навыков до уровня свободного общения в определенной специфике (бизнес-английский).</h3>
+                        <img src="img/symbols/1.svg">
+                    </div>
+                    <img src="img/symbols/Arrow-right.svg" class="right">
+                </div>
+                <div class="step">
+                    <img src="img/symbols/Arrow-left.svg" class="left">
+                    <div>
+                        <h2>Критерии успеха</h2>
+                        <h3>Определяем даты промежуточных итогов, где оценим успехи по всем скилам. Что лично для вас будет являться успехом? Когда вы сможете свободно выразить мысль? Не будете путать слова? Напишите самостоятельно имейл?</h3>
+                        <img src="img/symbols/2.svg">
+                    </div>
+                </div>
+                <div class="step">
+                    <div>
+                        <h2>Достижимая цель</h2>
+                        <h3>Если мы определили стартовый уровень как Beginner, значит наша реальная цель в короткий срок – Pre-Intermediate
+                        </h3>
+                        <img src="img/symbols/3.svg">
+                    </div>
+                    <img src="img/symbols/Arrow-right.svg" class="right">
+                </div>
+                <div class="step">
+                    <img src="img/symbols/Arrow-left.svg" class="left">
+                    <div>
+                        <h2>Имеющая значение цель</h2>
+                        <h3>Что лично для вас изменится с появлением языковой компетенции?
+                        </h3>
+                        <img src="img/symbols/4.svg">
+                    </div>
+                </div>
+                <div class="step" style="margin-right: 300px;">
+                    <div>
+                        <h2>Четкие сроки</h2>
+                        <h3>Когда вы хотите достигнуть этого уровня? 
+                        </h3>
+                        <img src="img/symbols/5.svg">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="js/unit_5.js"></script>
