--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>StudySchool</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/unit_6.css">
     <link rel="stylesheet" href="css/unit_7.css">
     <link rel="stylesheet" href="css/unit_8.css">
+    <link rel="stylesheet" href="css/unit_9.css">
     <link rel="stylesheet" href="fonts/nextart/nextart.css">
     <link rel="stylesheet" href="fonts/raleway/raleway.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -144,23 +145,23 @@
             <div class="form">
                 <h1 class="header">Записаться на пробное занятие</h1>
                 <div class="age">
-                    <div class="old">
+                    <div class="old_5">
                         <h2>Взрослые</h2>
-                        <div id="line_old"></div>
+                        <div id="line_old_5"></div>
                     </div>
-                    <div class="kid">
+                    <div class="kid_5">
                         <h2>Дети и подростки</h2>
-                        <div id="line_kid"></div>
+                        <div id="line_kid_5"></div>
                     </div>
                 </div>
                 <input list="languages" class="languages_list">
                 <div class="type">
                     <div class="online">
-                        <input type="radio" name="type" id="cb_online" checked>
+                        <input type="radio" name="type_5" id="cb_online" checked>
                         <h3>Онлайн-занятия</h3>
                     </div>
                     <div class="offline">
-                        <input type="radio" name="type" id="cb_offline">
+                        <input type="radio" name="type_5" id="cb_offline">
                         <h3>Занятия в клубе</h3>
                     </div>
                 </div>
@@ -366,7 +367,45 @@
             </div>
         </div>
     </div>
+    <div class="unit_9">
+        <div class="unit">
+            <div class="form">
+                <h1 class="header">Записаться на пробное занятие</h1>
+                <div class="age">
+                    <div class="old_9">
+                        <h2>Взрослые</h2>
+                        <div id="line_old_9"></div>
+                    </div>
+                    <div class="kid_9">
+                        <h2>Дети и подростки</h2>
+                        <div id="line_kid_9"></div>
+                    </div>
+                </div>
+                <input list="languages" class="languages_list">
+                <div class="type">
+                    <div class="online">
+                        <input type="radio" name="type_9" id="cb_online" checked>
+                        <h3>Онлайн-занятия</h3>
+                    </div>
+                    <div class="offline">
+                        <input type="radio" name="type_9" id="cb_offline">
+                        <h3>Занятия в клубе</h3>
+                    </div>
+                </div>
+                <div class="name_phone">
+                    <input type="text" placeholder="Имя">
+                    <input type="text" placeholder="Телефон">
+                </div>
+                <input type="email" class="input_email" placeholder="Почта">
+                <div id="button_sendForm">
+                    Отправить
+                </div>
+            </div>
+            <img src="img/images/illustration2.svg">
+        </div>
+    </div>
     <script src="js/unit_5.js"></script>
+    <script src="js/unit_9.js"></script>
 </body>
 </html>
 <datalist id="languages">
