--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="css/unit_7.css">
     <link rel="stylesheet" href="css/unit_8.css">
     <link rel="stylesheet" href="css/unit_9.css">
+    <link rel="stylesheet" href="css/unit_10.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="fonts/nextart/nextart.css">
     <link rel="stylesheet" href="fonts/raleway/raleway.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -58,7 +60,7 @@
     </div>
     <div class="unit_2">
         <div class="left">
-            <img src="img/images/childrens.svg">
+            <img src="img/images/Rectangle 151.png">
             <h1 class="text">
                 обучение
             </h1>
@@ -402,6 +404,59 @@
                 </div>
             </div>
             <img src="img/images/illustration2.svg">
+        </div>
+    </div>
+    <div class="unit_10">
+        <div class="unit">
+            <h1>
+                История развития Speaky school
+            </h1>
+            <div class="rectangle"></div>
+            <img class="timeline" src="img/images/временная лента.svg">
+            <div class="composition_history">
+                <img src="img/images/composition with photo.png">
+                <div>
+                    <h1>2021</h1>
+                    <h2>Открытие языковых лагерей для взрослых и детей</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="left">
+            <h2>Иностранные языки</h2>
+            <h3>Для взрослых онлайн</h3>
+            <h3>Для взрослых офлайн</h3>
+            <h3>Для детей онлайн</h3>
+            <h3>Для детей офлайн</h3>
+            <h3>© 2021 Speaky school. Все права защищены.
+            </h3>
+        </div>
+        <div class="center">
+            <div class="logo">
+                <img src="img/logoes/logo_school.svg" style="margin-right: 14px;">
+                <img src="img/logoes/logo_header.svg" style="margin-right: 14px;">
+                <img src="img/logoes/logo_speaky.svg">
+            </div>
+            <div class="networks">
+                <img src="img/icons/facebook.svg" style="margin: 12px;">
+                <img src="img/icons/inst.svg" style="margin: 12px;">
+                <img src="img/icons/whatsup.svg" style="margin: 12px;">
+                <img src="img/icons/vk.svg" style="width: 44px;">
+            </div>
+            <div class="button">
+                Онлайн-оплата
+            </div>
+        </div>
+        <div class="right">
+            <h2>Контакты</h2>
+            <h3>+7 (495) 723-75-15</h3>
+            <h3>info@speaky.school</h3>
+            <h3>108840, Россия
+                , г. Москва, г. Троицк
+                , Троицкий бульвар, 6</h3>
+            <h3>Design by @arinkob
+            </h3>
         </div>
     </div>
     <script src="js/unit_5.js"></script>
