online_kids_unit_4
all is done

--- a/source/online_for_kids.html
+++ b/source/online_for_kids.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/online_kids_unit_2.css">
     <link rel="stylesheet" href="../css/online_kids_unit_2_2.css">
     <link rel="stylesheet" href="../css/online_kids_unit_3.css">
+    <link rel="stylesheet" href="../css/online_kids_unit_4.css">
     <link rel="stylesheet" href="../fonts/nextart/nextart.css">
     <link rel="stylesheet" href="../fonts/raleway/raleway.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -105,6 +106,42 @@
                 </div>
             </div>
             <img src="../img/images/2002.png" class="right">
+        </div>
+    </div>
+    <div class="unit_4">
+        <div class="unit">
+            <h1>Результата достигаем за счет:</h1>
+            <div class="rectangle"></div>
+            <div class="tablet">
+                <div class="line">
+                    <div class="col">
+                        <img src="../img/icons/039-books.svg">
+                        <h3>языковой цели для каждого студента и срока достижения цели</h3>
+                    </div>
+                    <div class="col col2">
+                        <img src="../img/icons/027-device.svg">
+                        <h3>максимального погружения в языковую среду с носителями языка</h3>
+                    </div>
+                    <div class="col">
+                        <img src="../img/icons/007-brain.svg">
+                        <h3>грамматики, письма, чтения, аудирования на каждом уроке</h3>
+                    </div>
+                </div>
+                <div class="line">
+                    <div class="col">
+                        <img src="../img/icons/013-innovation.svg">
+                        <h3>заданий на основе интересов и увлечений детей</h3>
+                    </div>
+                    <div class="col col2">
+                        <img src="../img/icons/011-audiobook.svg">
+                        <h3>обратной связи с родителями каждые 8-10 занятий с промежуточными тестами</h3>
+                    </div>
+                    <div class="col">
+                        <img src="../img/icons/050-network.svg">
+                        <h3>чёткого тайминга занятий и контроля результатов</h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
