--- a/source/online_for_kids.html
+++ b/source/online_for_kids.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/online_kids_unit_2_2.css">
     <link rel="stylesheet" href="../css/online_kids_unit_3.css">
     <link rel="stylesheet" href="../css/online_kids_unit_4.css">
+    <link rel="stylesheet" href="../css/online_kids_unit_5.css">
     <link rel="stylesheet" href="../fonts/nextart/nextart.css">
     <link rel="stylesheet" href="../fonts/raleway/raleway.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -139,6 +140,48 @@
                     <div class="col">
                         <img src="../img/icons/050-network.svg">
                         <h3>чёткого тайминга занятий и контроля результатов</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="unit_5">
+        <div class="unit">
+            <img src="../img/images/2003.png">
+            <div class="right">
+                <h1>Что такое иностранные языки для нас?</h1>
+                <div class="rectangle" style="top: 32px; width: 346px"></div>
+                <div class="rectangle" style="top: 66px; width: 224px"></div>
+                <div class="bottom">
+                    <div class="col">
+                        <div class="line">
+                            <img src="../img/symbols/20031.svg">
+                            <h2>Навыки</h2>
+                        </div>
+                        <div class="line">
+                            <img src="../img/symbols/20032.svg">
+                            <h2>Знания</h2>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="line">
+                            <img src="../img/symbols/20033.svg">
+                            <h2>Культурная среда </h2>
+                        </div>
+                        <div class="line">
+                            <img src="../img/symbols/20034.svg">
+                            <h2>Языковая среда</h2>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="line">
+                            <img src="../img/symbols/20035.svg">
+                            <h2>Жизненные ценности</h2>
+                        </div>
+                        <div class="line">
+                            <img src="../img/symbols/20036.svg">
+                            <h2>Дружественная атмосфера</h2>
+                        </div>
                     </div>
                 </div>
             </div>
