online_kids_unit_6_7 + footer
online_kids page is all done

--- a/source/online_for_kids.html
+++ b/source/online_for_kids.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="../css/online_kids_unit_3.css">
     <link rel="stylesheet" href="../css/online_kids_unit_4.css">
     <link rel="stylesheet" href="../css/online_kids_unit_5.css">
+    <link rel="stylesheet" href="../css/online_kids_unit_6.css">
+    <link rel="stylesheet" href="../css/online_kids_unit_7.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../fonts/nextart/nextart.css">
     <link rel="stylesheet" href="../fonts/raleway/raleway.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -187,5 +190,134 @@
             </div>
         </div>
     </div>
+    <div class="unit_6">
+        <div class="unit">
+            <h1>пакеты обучения</h1>
+            <div class="rectangle"></div>
+            <div class="type">
+                <div class="indiv">
+                    <h2>Индивидуальные уроки</h2>
+                    <div class="underline" id="lineIndiv"></div>
+                </div>
+                <div class="common">
+                    <h2>Разговорный клуб</h2>
+                    <div class="underline" id="lineCommon"></div>
+                </div>
+            </div>
+            <div class="time">
+                <div class="min30">
+                    <h2>30 минут</h2>
+                    <div class="underline" id="lineMin30"></div>
+                </div>
+                <div class="min60">
+                    <h2>60 минут</h2>
+                    <div class="underline" id="lineMin60"></div>
+                </div>
+            </div>
+            <div class="tablets">
+                <div class="tablet left">
+                    <img id="leftImg" src="../img/images/20061.svg">
+                    <h2 id="leftH2">4 занятия по 30 мин</h2>
+                    <div id="priceLeft" class="price">3400 ₽ </div>
+                    <div class="button">
+                        Выбрать
+                    </div>
+                </div>
+                <div class="tablet middle">
+                    <img id="middleImg" src="../img/images/20062.svg">
+                    <h2 id="middleH2">8 занятий по 30 мин</h2>
+                    <div id="priceMiddle" class="price">6800 ₽</div>
+                    <div class="button">
+                        Выбрать
+                    </div>
+                </div>
+                <div class="tablet right">
+                    <img id="rightImg" src="../img/images/20063.svg">
+                    <h2 id="rightH2">12 занятий по 30 мин</h2>
+                    <div id="priceRight" class="price">10200 ₽</div>
+                    <div class="button">
+                        Выбрать
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="unit_7">
+        <div class="unit">
+            <div class="form">
+                <h1 class="header">Записаться на пробное занятие</h1>
+                <div class="age">
+                    <div class="old_7">
+                        <h2>Взрослые</h2>
+                        <div id="line_old_7"></div>
+                    </div>
+                    <div class="kid_7">
+                        <h2>Дети и подростки</h2>
+                        <div id="line_kid_7"></div>
+                    </div>
+                </div>
+                <input list="languages" class="languages_list">
+                <div class="type">
+                    <div class="online">
+                        <input type="radio" name="type_7" id="cb_online" checked>
+                        <h3>Онлайн-занятия</h3>
+                    </div>
+                    <div class="offline">
+                        <input type="radio" name="type_7" id="cb_offline">
+                        <h3>Занятия в клубе</h3>
+                    </div>
+                </div>
+                <div class="name_phone">
+                    <input type="text" placeholder="Имя">
+                    <input type="text" placeholder="Телефон">
+                </div>
+                <input type="email" class="input_email" placeholder="Почта">
+                <div id="button_sendForm">
+                    Отправить
+                </div>
+            </div>
+            <img src="../img/images/illustration2.svg">
+        </div>
+    </div>
+    <div class="footer">
+        <div class="left">
+            <h2>Иностранные языки</h2>
+            <h3>Для взрослых онлайн</h3>
+            <h3>Для взрослых офлайн</h3>
+            <h3>Для детей онлайн</h3>
+            <h3>Для детей офлайн</h3>
+            <h3>© 2021 Speaky school. Все права защищены.
+            </h3>
+        </div>
+        <div class="center">
+            <div class="logo">
+                <img src="../img/logoes/logo_school.svg" style="margin-right: 14px;">
+                <img src="../img/logoes/logo_header.svg" style="margin-right: 14px;">
+                <img src="../img/logoes/logo_speaky.svg">
+            </div>
+            <div class="networks">
+                <img src="../img/icons/facebook.svg" style="margin: 12px;">
+                <img src="../img/icons/inst.svg" style="margin: 12px;">
+                <img src="../img/icons/whatsup.svg" style="margin: 12px;">
+                <img src="../img/icons/vk.svg" style="width: 44px;">
+            </div>
+            <div class="button">
+                Онлайн-оплата
+            </div>
+        </div>
+        <div class="right">
+            <h2>Контакты</h2>
+            <h3>+7 (495) 723-75-15</h3>
+            <h3>info@speaky.school</h3>
+            <h3>108840, Россия
+                , г. Москва, г. Троицк
+                , Троицкий бульвар, 6</h3>
+            <h3>Design by @arinkob
+            </h3>
+        </div>
+    </div>
+
+    <script src="../js/online_kids_unit_6.js"></script>
+    <script src="../js/online_kids_unit_7.js"></script>
 </body>
 </html>
