offline_kids page done
the choice of an offline lesson has been implemented

--- a/source/offline_for_kids.html
+++ b/source/offline_for_kids.html
@@ -205,23 +205,17 @@
             <h1>пакеты обучения</h1>
             <div class="rectangle"></div>
             <div class="type">
-                <div class="indiv">
+                <div class="indivOffline">
                     <h2>Индивидуальные уроки</h2>
                     <div class="underline" id="lineIndiv"></div>
                 </div>
-                <div class="common">
+                <div class="groups">
+                    <h2>Групповые уроки</h2>
+                    <div class="underline" id="lineGroups"></div>
+                </div>
+                <div class="commonOffline">
                     <h2>Разговорный клуб</h2>
                     <div class="underline" id="lineCommon"></div>
-                </div>
-            </div>
-            <div class="time">
-                <div class="min30">
-                    <h2>30 минут</h2>
-                    <div class="underline" id="lineMin30"></div>
-                </div>
-                <div class="min60">
-                    <h2>60 минут</h2>
-                    <div class="underline" id="lineMin60"></div>
                 </div>
             </div>
             <div class="tablets">
@@ -232,6 +226,7 @@
                     <div class="button">
                         Выбрать
                     </div>
+                    <div class="someInfo">*зависит от возраста ребёнка</div>
                 </div>
                 <div class="tablet middle">
                     <img id="middleImg" src="../img/images/20062.svg">
@@ -240,6 +235,7 @@
                     <div class="button">
                         Выбрать
                     </div>
+                    <div class="someInfo">*зависит от возраста ребёнка</div>
                 </div>
                 <div class="tablet right">
                     <img id="rightImg" src="../img/images/20063.svg">
@@ -248,6 +244,7 @@
                     <div class="button">
                         Выбрать
                     </div>
+                    <div class="someInfo">*зависит от возраста ребёнка</div>
                 </div>
             </div>
         </div>
