--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="fonts/nextart/nextart.css">
     <link rel="stylesheet" href="fonts/raleway/raleway.css">
-      
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>  
 </head>
 <body>
     <header>
