offer done + started adaptation

--- a/index.html
+++ b/index.html
@@ -48,57 +48,63 @@
         </div>
     </header>
     <div class="unit_1">
-        <div class="left">
-            <div class="big_text">
-                ШКОЛА ИНОСТРАННЫХ ЯЗЫКОВ ДЛЯ ВСЕЙ СЕМЬИ
+        <div class="unit">
+            <div class="left">
+                <div class="big_text">
+                    ШКОЛА ИНОСТРАННЫХ ЯЗЫКОВ ДЛЯ ВСЕЙ СЕМЬИ
+                </div>
+                <div class="button_trial_lesson">
+                    Пробное занятие
+                </div>
             </div>
-            <div class="button_trial_lesson">
-                Пробное занятие
-            </div>
+            <img src="img/images/illustration1.svg">
         </div>
-        <img src="img/images/illustration1.svg">
     </div>
     <div class="unit_2">
-        <div class="left">
-            <img src="img/images/Rectangle 151.png">
-            <h1 class="text">
-                обучение
-            </h1>
-            <h1 class="text" style="top: 105px;">
-                взрослых
-            </h1>
-        </div>
-        <div class="right">
-            <img src="img/images/childrens.svg">
-            <h1 class="text">
-                обучение
-            </h1>
-            <h1 class="text" style="top: 105px;">
-                детей
-            </h1>
+        <div class="unit">
+            <div class="left">
+                <img src="img/images/Rectangle 151.png">
+                <h1 class="text">
+                    обучение
+                </h1>
+                <h1 class="text" style="top: 105px;">
+                    взрослых
+                </h1>
+            </div>
+            <div class="right">
+                <img src="img/images/childrens.svg">
+                <h1 class="text">
+                    обучение
+                </h1>
+                <h1 class="text" style="top: 105px;">
+                    детей
+                </h1>
+            </div>
         </div>
     </div>
     <div class="unit_3">
-        <div class="maintext">
-            <div class="rectangle"></div>
-            <h1 class="text">У нас вы можете выучить:</h1>
-        </div>
-        <div class="languages">
-            <div class="eng">
-                <img src="img/icons/uk.svg">
-                <h2 class="lang_text">Английский</h2>
+        <div class="unit">
+            <div class="maintext">
+                <div class="rectangle"></div>
+                <h1 class="text">У нас вы можете выучить:</h1>
             </div>
-            <div class="ger">
-                <img src="img/icons/germany.svg">
-                <h2 class="lang_text">Немецкий</h2>
-            </div>
-            <div class="span">
-                <img src="img/icons/spain.svg">
-                <h2 class="lang_text">Испанский</h2>
-            </div>
-            <div class="fr">
-                <img src="img/icons/france.svg">
-                <h2 class="lang_text">Французский</h2>
+            <div class="languages">
+                <div class="eng">
+                    <img src="img/icons/uk.svg">
+                    <h2 class="lang_text">Английский</h2>
+                </div>
+                <div class="ger">
+                    <img src="img/icons/germany.svg">
+                    <h2 class="lang_text">Немецкий</h2>
+                </div>
+                <div class="span">
+                    <img src="img/icons/spain.svg">
+                    <h2 class="lang_text">Испанский</h2>
+                </div>
+                <div class="fr">
+                    <img src="img/icons/france.svg">
+                    <h2 class="lang_text">Французский</h2>
+                </div>
             </div>
         </div>
     </div>
@@ -176,7 +182,8 @@
                     Отправить
                 </div>
             </div>
-            <img src="img/images/illustration2.svg">
+            <img class="img_form1" src="img/images/illustration2.svg">
+            <img class="img_form2" src="img/images/101.png">
         </div>
     </div>
     <div class="unit_6">
@@ -403,7 +410,8 @@
                     Отправить
                 </div>
             </div>
-            <img src="img/images/illustration2.svg">
+            <img class="img_form1" src="img/images/illustration2.svg">
+            <img class="img_form2" src="img/images/101.svg">
         </div>
     </div>
     <div class="unit_10">
