adaptive design on main page

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <img src="img/icons/vk.svg" style="width: 44px;">
             <img src="img/icons/phone.svg" style="width: 44px;">
         </div>
+        <div class="burger">
+            <img src="img/symbols/001.svg">
+        </div>
     </header>
     <div class="unit_1">
         <div class="unit">
@@ -148,7 +151,7 @@
             </div>
         </div>
     </div>
-    <div class="unit_5">
+    <!-- <div class="unit_5">
         <div class="unit">
             <div class="form">
                 <h1 class="header">Записаться на пробное занятие</h1>
@@ -185,7 +188,7 @@
             <img class="img_form1" src="img/images/illustration2.svg">
             <img class="img_form2" src="img/images/101.png">
         </div>
-    </div>
+    </div> -->
     <div class="unit_6">
         <div class="unit">
             <img class="illustration" src="img/images/illustration_unit_6.svg">
@@ -241,6 +244,7 @@
     </div>
     <div class="unit_7">
         <div class="unit">
+            <img class="illustration_adapt" src="img/images/illustration_unit_6.svg">
             <div class="for_kids">
                 <div class="caption">Для взрослых</div>
                 <div class="rectangle"></div>
@@ -365,7 +369,7 @@
                         <img src="img/symbols/4.svg">
                     </div>
                 </div>
-                <div class="step" style="margin-right: 300px;">
+                <div class="step step5">
                     <div>
                         <h2>Четкие сроки</h2>
                         <h3>Когда вы хотите достигнуть этого уровня? 
@@ -376,7 +380,7 @@
             </div>
         </div>
     </div>
-    <div class="unit_9">
+    <!-- <div class="unit_9">
         <div class="unit">
             <div class="form">
                 <h1 class="header">Записаться на пробное занятие</h1>
@@ -413,7 +417,7 @@
             <img class="img_form1" src="img/images/illustration2.svg">
             <img class="img_form2" src="img/images/101.svg">
         </div>
-    </div>
+    </div> -->
     <div class="unit_10">
         <div class="unit">
             <h1>
@@ -455,6 +459,15 @@
             <div class="button">
                 Онлайн-оплата
             </div>
+        </div>
+        <div class="left2">
+            <h2>Иностранные языки</h2>
+            <h3>Для взрослых онлайн</h3>
+            <h3>Для взрослых офлайн</h3>
+            <h3>Для детей онлайн</h3>
+            <h3>Для детей офлайн</h3>
+            <h3>© 2021 Speaky school. Все права защищены.
+            </h3>
         </div>
         <div class="right">
             <h2>Контакты</h2>
