register form adaptation done

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </div>
         </div>
     </div>
-    <!-- <div class="unit_5">
+    <div class="unit_5">
         <div class="unit">
             <div class="form">
                 <h1 class="header">Записаться на пробное занятие</h1>
@@ -186,9 +186,9 @@
                 </div>
             </div>
             <img class="img_form1" src="img/images/illustration2.svg">
-            <img class="img_form2" src="img/images/101.png">
+            <img class="img_form2" src="img/images/101.svg">
         </div>
-    </div> -->
+    </div>
     <div class="unit_6">
         <div class="unit">
             <img class="illustration" src="img/images/illustration_unit_6.svg">
@@ -380,7 +380,7 @@
             </div>
         </div>
     </div>
-    <!-- <div class="unit_9">
+    <div class="unit_9">
         <div class="unit">
             <div class="form">
                 <h1 class="header">Записаться на пробное занятие</h1>
@@ -417,7 +417,7 @@
             <img class="img_form1" src="img/images/illustration2.svg">
             <img class="img_form2" src="img/images/101.svg">
         </div>
-    </div> -->
+    </div>
     <div class="unit_10">
         <div class="unit">
             <h1>
